--- a/Azlant/src/main/webapp/resources/css/azlant.css
+++ b/Azlant/src/main/webapp/resources/css/azlant.css
@@ -1,2 +1,78 @@
 @charset "UTF-8";
-table, td { border-style: solid; border-width: 1px; border-collapse: collapse; }
+
+/* My Wiki style sheet */
+
+body, div, ul, ol {
+	margin: 0;
+	padding: 0;
+}
+body {
+    background-color: #F5F5F5;
+	color: #353833;
+    font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+}
+/* L'ensemble de la page est fixé et centré */
+.global {
+	width: 1200px;
+	margin: 0 auto;
+}
+/* Block header */
+.header {
+	height: 80px;
+	padding: 10px;
+	background-color: lightgrey;
+	font-size: 14px;
+}
+/* Block menu */
+.menu {
+	background-color: lavender;
+}
+/* Detail menu navigation*/
+#main-menu {
+	display: flex;
+	list-style-type: none;
+}
+#main-menu li {
+	flex: 0 1 auto;
+}
+#main-menu li a, #main-menu li a:visited {
+	display: block;
+	height: 35px;
+	line-height: 35px;
+	padding: 10px 20px;
+	font-size: 14px;
+	text-decoration: none;
+	color: black;
+}
+#main-menu li a:hover {
+	background-color: lightsteelblue;
+	color: brown;
+}
+/* Block footer */
+.footer {
+	padding: 10px;
+	background-color: lightgrey;
+}
+/* Block content */
+.content {
+	padding: 10px;
+	background-color: white;
+}
+.content ul, .content ol {
+	padding-left: 20px;
+}
+h1 {
+    color:#005587;
+}
+h2 {
+    color:#6399ae;
+}
+table, td, th { 
+	border-style: solid; 
+	border-width: 1px; 
+	border-collapse: collapse;
+}
+td, th { 
+	padding: 10px;
+}
